test/errors/offsets_error/zs/arithmetic_mult_operator_error.zs
package arithmetic_mult_operator_error;

struct ArithmeticMultOperatorError
{
    uint32 offset;
offset * offset:
    string field;
};
